--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
