--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Currency Fair Graham Barry",
   "main": "index.js",
-  "engines" : { "node" : "14.17.5" },
+  "engines": {
+    "node": "14.17.5"
+  },
   "scripts": {
     "dev": "webpack serve --mode development",
     "start": "node server.js",
@@ -16,7 +18,7 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "dotenv-webpack": "^7.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
