--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
+    "react-transition-group": "^4.4.2",
     "recharts": "^2.1.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
